@@ -40,6 +40,7 @@
 		#include <avr/io.h>
 		#include <avr/wdt.h>
 		#include <avr/boot.h>
+		#include <avr/wdt.h>
 		#include <stdbool.h>
 
 		#include "Descriptors.h"
