@@ -121,7 +121,9 @@
 				static void USB_Device_GetConfiguration(void);
 				static void USB_Device_GetDescriptor(void);
 				static void USB_Device_GetStatus(const uint8_t bmRequestType);
-				static void USB_Device_ClearSetFeature(const uint8_t bRequest);
+				#if !defined(NO_CLEARSET_FEATURE_REQUEST)
+				static void USB_Device_ClearSetFeature(const uint8_t bRequest, const uint8_t bmRequestType);
+				#endif
 			#endif
 	#endif
 
